// Vitest Snapshot v1

exports[`Tag > Tag baseVue demo works fine 1`] = `
<div
  data-v-e5a453e6=""
>
  <div
    class="tag-demo"
    data-v-e5a453e6=""
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <a
      data-v-e5a453e6=""
      href="https://www.tencent.com/zh-cn"
      target="_blank"
    >
      <span
        class="t-tag t-tag--default t-tag--dark t-size-m"
        data-v-e5a453e6=""
      >
        <!---->
        
        超链接
        
        <!---->
      </span>
    </a>
  </div>
  <div
    class="tag-demo"
    data-v-e5a453e6=""
  >
    <span
      class="t-tag t-tag--primary t-tag--dark t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--dark t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--dark t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--dark t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo light"
    data-v-e5a453e6=""
  >
    <span
      class="t-tag t-tag--primary t-tag--light t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--light t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--light t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--light t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo"
    data-v-e5a453e6=""
  >
    <span
      class="t-tag t-tag--primary t-tag--outline t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--outline t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--outline t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--outline t-size-m"
      data-v-e5a453e6=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag > Tag deleteVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-5c1ec232=""
>
  <div
    class="tag-block"
    data-v-5c1ec232=""
  >
    <span
      class="t-tag t-tag--primary t-tag--dark t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签一
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-tag--dark t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签二
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-tag--dark t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签三
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-tag--dark t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签四
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block light"
    data-v-5c1ec232=""
  >
    <span
      class="t-tag t-tag--primary t-tag--light t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签一
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-tag--light t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签二
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-tag--light t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签三
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-tag--light t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签四
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block"
    data-v-5c1ec232=""
  >
    <span
      class="t-tag t-tag--primary t-tag--outline t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签一
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--success t-tag--outline t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签二
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--warning t-tag--outline t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签三
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--danger t-tag--outline t-tag--close t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      标签四
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="tag-block"
    data-v-5c1ec232=""
  >
    
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
      data-v-5c1ec232=""
      style="max-width: 100px;"
    >
      <!---->
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-tag--close t-size-m"
      data-v-5c1ec232=""
      style="max-width: 100px;"
    >
      <svg
        class="t-icon t-icon-discount"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      <span
        class="t-tag--text"
        style="max-width: 100px;"
      >
        
        可删除标签可删除标签
        
      </span>
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <span
      class="t-tag t-tag--default t-tag--dark t-tag--close t-tag--disabled t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      可删除标签
      
      <svg
        class="t-icon t-icon-close t-tag__icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    
  </div>
  <div
    class="tag-block editable"
    data-v-5c1ec232=""
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      data-v-5c1ec232=""
    >
      <!---->
      
      <svg
        class="t-icon t-icon-add"
        data-v-5c1ec232=""
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
       添加标签 
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag > Tag disabledVue demo works fine 1`] = `
<div
  class="tdesign-tag-disabled tag-demo"
  data-v-49fb0a38=""
>
  <span
    class="t-tag t-tag--check t-tag--default t-size-m t-tag--disabled check-tag"
    data-v-49fb0a38=""
  >
    
    失效标签
    
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--disabled t-size-m"
    data-v-49fb0a38=""
  >
    <!---->
    
    失效标签
    
    <!---->
  </span>
</div>
`;

exports[`Tag > Tag iconVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
    >
      <svg
        class="t-icon t-icon-discount"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      
       默认标签 
      
      <!---->
    </span>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
    >
      
      <svg
        class="t-icon t-icon-discount"
      >
        <use
          href="#t-icon-discount"
        />
      </svg>
      
      
       Icon插槽 
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag > Tag longTextVue demo works fine 1`] = `
<div
  class="tdesign-tag-ellipsis"
>
  <span
    class="t-tag t-tag--default t-tag--dark t-tag--ellipsis t-size-m"
    style="max-width: 150px;"
    title="默认超八个字超长文本标签超长省略文本标签"
  >
    <!---->
    <span
      class="t-tag--text"
      style="max-width: 150px;"
    >
      
      默认超八个字超长文本标签超长省略文本标签
      
    </span>
    <!---->
  </span>
</div>
`;

exports[`Tag > Tag plainVue demo works fine 1`] = `
<div
  class="tdesign-tag-outline"
>
  <span
    class="t-tag t-tag--primary t-tag--outline t-size-m"
  >
    <!---->
    
    标签一
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--success t-tag--outline t-size-m"
  >
    <!---->
    
    标签二
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-tag--outline t-size-m"
  >
    <!---->
    
    标签三
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--warning t-tag--outline t-size-m"
  >
    <!---->
    
    标签四
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--danger t-tag--outline t-size-m"
  >
    <!---->
    
    标签五
    
    <!---->
  </span>
</div>
`;

exports[`Tag > Tag selectableVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-4ce40612=""
>
  
  <span
    class="t-tag t-tag--check t-tag--default t-size-m t-tag--checked"
    data-v-4ce40612=""
  >
    
    选中
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default t-size-m"
    data-v-4ce40612=""
  >
    
    未选
    
  </span>
  <span
    class="t-tag t-tag--check t-tag--default t-size-m t-tag--disabled"
    data-v-4ce40612=""
  >
    
    Disabled
    
  </span>
  
</div>
`;

exports[`Tag > Tag shapeVue demo works fine 1`] = `
<div
  data-v-25bc0115=""
>
  <div
    class="tag-demo"
    data-v-25bc0115=""
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-tag--dark t-size-m"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo"
    data-v-25bc0115=""
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m t-tag--round"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-tag--dark t-size-m t-tag--round"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
  <div
    class="tag-demo"
    data-v-25bc0115=""
  >
    <span
      class="t-tag t-tag--default t-tag--dark t-size-m t-tag--mark"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--primary t-tag--dark t-size-m t-tag--mark"
      data-v-25bc0115=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
  </div>
</div>
`;

exports[`Tag > Tag sizeVue demo works fine 1`] = `
<div
  class="tag-demo"
  data-v-2645973d=""
>
  <span
    class="t-tag t-tag--default t-tag--dark t-size-s"
    data-v-2645973d=""
  >
    <!---->
    
    小型标签
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-size-m"
    data-v-2645973d=""
  >
    <!---->
    
    默认标签
    
    <!---->
  </span>
  <span
    class="t-tag t-tag--default t-tag--dark t-size-l"
    data-v-2645973d=""
  >
    <!---->
    
    大型标签
    
    <!---->
  </span>
</div>
`;

exports[`Tag > Tag themeVue demo works fine 1`] = `
<div
  class="tdesign-tag-theme"
  data-v-ef0a5986=""
>
  <div
    class="tdesign-demo-block"
    data-v-ef0a5986=""
  >
     深色 
    <span
      class="t-tag t-tag--primary t-tag--dark t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--dark t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--dark t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--dark t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tdesign-demo-block light"
    data-v-ef0a5986=""
  >
     浅色 
    <span
      class="t-tag t-tag--primary t-tag--light t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--light t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--light t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--light t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
  <div
    class="tdesign-demo-block plain"
    data-v-ef0a5986=""
  >
     朴素 
    <span
      class="t-tag t-tag--primary t-tag--outline t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签一
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--success t-tag--outline t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签二
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--warning t-tag--outline t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签三
      
      <!---->
    </span>
    <span
      class="t-tag t-tag--danger t-tag--outline t-size-m"
      data-v-ef0a5986=""
    >
      <!---->
      
      标签四
      
      <!---->
    </span>
  </div>
</div>
`;
